# xhs-guard-plugin

./: CMakeLists.txt
.github/workflows/: main.yml
cmake/windows/: buildspec.cmake
src/: AudioController.cpp  AudioController.h  Common.h  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  Dashboard.cpp  Dashboard.h  Dashboard.ui  HttpServer.cpp  HttpServer.h  plugin-main.cpp  resources.qrc
